--- a/.github/workflows/Image-BuildAndPush.yml
+++ b/.github/workflows/Image-BuildAndPush.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         
+      - name: Get ID
+        run: echo $(GITHUB_RUN_ID)
+        
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -43,7 +46,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:${GITHUB_RUN_ID}
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
