--- a/.github/workflows/Image-BuildAndPush.yml
+++ b/.github/workflows/Image-BuildAndPush.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         
-      - name: Get ID
-        run: echo $(GITHUB_RUN_ID)
+      - name: Get environment variables
+        run: env
         
       - name: Login to Docker Hub
         uses: docker/login-action@v1
