--- a/.github/workflows/Image-BuildAndPush.yml
+++ b/.github/workflows/Image-BuildAndPush.yml
@@ -29,6 +29,11 @@ jobs:
       - name: Get environment variables
         run: env
         
+      - name: Display Environment variable
+        run: |
+          echo "The is is: " \
+          echo $(GITHUB_RUN_ID)
+        
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
