--- a/.github/workflows/Image-BuildAndPush.yml
+++ b/.github/workflows/Image-BuildAndPush.yml
@@ -29,10 +29,10 @@ jobs:
       - name: Get environment variables
         run: env
         
+      - name: Display Environment variable      
+        run: echo $GITHUB_RUN_ID
       - name: Display Environment variable
-        run: |
-          echo "The is is: " \
-          echo $(GITHUB_RUN_ID)
+        run: echo $(env.GITHUB_RUN_ID)
         
       - name: Login to Docker Hub
         uses: docker/login-action@v1
