--- a/.github/workflows/Image-BuildAndPush.yml
+++ b/.github/workflows/Image-BuildAndPush.yml
@@ -29,10 +29,8 @@ jobs:
       - name: Get environment variables
         run: env
         
-      - name: Display Environment variable      
+      - name: Get the Run ID      
         run: echo $GITHUB_RUN_ID
-      - name: Display Environment variable
-        run: echo $(env.GITHUB_RUN_ID)
         
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -51,7 +49,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:$GITHUB_RUN_ID
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
