--- a/.github/workflows/Image-BuildAndPush.yml
+++ b/.github/workflows/Image-BuildAndPush.yml
@@ -49,7 +49,8 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:${{GITHUB_RUN_ID}}
+          addLatest: false
+          #tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:${{GITHUB_RUN_ID}}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
